--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>🍜 POS ร้านขนมจีน</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -10,11 +10,8 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <style>
-body{
-  background: radial-gradient(ellipse at top, #1e293b, #020617);
-  color:#e5e7eb;
-}
-select,input{ color:#000 !important }
+body{background:#020617;color:#e5e7eb}
+button{font-weight:600}
 </style>
 </head>
 
@@ -23,7 +20,8 @@ select,input{ color:#000 !important }
 <h1 class="text-xl font-bold text-center">🍜 POS ร้านขนมจีน</h1>
 
 <!-- เลือกโต๊ะ -->
-<select id="tableSelect" class="w-full p-2 rounded">
+<select id="tableSelect" class="w-full p-2 text-black rounded"
+  onchange="openTable()">
   <option value="">-- เลือกโต๊ะ --</option>
 </select>
 
@@ -36,125 +34,79 @@ select,input{ color:#000 !important }
 <!-- บิล -->
 <div class="bg-slate-800 p-3 rounded">
   <div id="bill"></div>
-  <div class="border-t mt-2 pt-2 font-bold">
+  <div class="border-t mt-2 pt-2 text-lg font-bold">
     รวม: <span id="total">0</span> บาท
   </div>
 </div>
 
 <!-- ชำระเงิน -->
 <div class="flex gap-2">
-  <button onclick="openPay('cash')" class="flex-1 bg-emerald-600 py-3 rounded">💵 เงินสด</button>
-  <button onclick="openPay('promptpay')" class="flex-1 bg-indigo-600 py-3 rounded">📲 พร้อมเพย์</button>
-</div>
-
-<button onclick="cancelOrder()" class="w-full bg-red-600 py-2 rounded">
-  ❌ ยกเลิกบิล
-</button>
-
-<!-- ===== MODAL ADDON ===== -->
-<div id="addonModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
-  <div class="bg-slate-800 p-4 rounded w-80">
-    <h2 id="addonTitle" class="font-bold mb-2 text-center"></h2>
-
-    <label><input type="checkbox" id="addonSpecial"> พิเศษ +10</label><br>
-
-    <label>
-      <input type="checkbox" id="addonMix" onchange="toggleMix()"> ผสมน้ำ +10
-    </label>
-
-    <select id="mixSelect" class="w-full mt-1 rounded hidden"></select>
-
-    <button onclick="confirmAddon()" class="mt-3 bg-emerald-600 w-full py-2 rounded">
-      เพิ่มลงบิล
-    </button>
-
-    <button onclick="closeAddon()" class="mt-2 bg-slate-600 w-full py-1 rounded">
-      ยกเลิก
-    </button>
-  </div>
-</div>
-
-<!-- ===== MODAL PAY ===== -->
-<div id="payModal" class="fixed inset-0 bg-black/70 hidden items-center justify-center">
-  <div class="bg-slate-800 p-4 rounded w-80 text-center">
-    <h2 id="payTitle" class="font-bold mb-2"></h2>
-
-    <div id="ppBox" class="hidden">
-      <img id="ppQR" class="mx-auto w-56 bg-white p-2 rounded">
-      <button onclick="confirmPay('promptpay')" class="mt-2 bg-indigo-600 w-full py-2 rounded">
-        ยืนยันรับโอน
-      </button>
-    </div>
-
-    <div id="cashBox" class="hidden">
-      <input id="cashInput" type="number" class="w-full p-2 rounded mb-2"
-        placeholder="รับเงิน" oninput="calcChange()">
-      เงินทอน: <span id="changeText">0</span> บาท
-      <button onclick="confirmPay('cash')" class="mt-2 bg-emerald-600 w-full py-2 rounded">
-        ยืนยันรับเงิน
-      </button>
-    </div>
-
-    <button onclick="closePay()" class="mt-3 bg-red-600 w-full py-1 rounded">
-      ยกเลิก
-    </button>
-  </div>
+  <button onclick="pay('cash')" class="flex-1 bg-emerald-600 py-3 rounded">💵 เงินสด</button>
+  <button onclick="pay('promptpay')" class="flex-1 bg-indigo-600 py-3 rounded">📲 พร้อมเพย์</button>
 </div>
 
 <script>
 /* ================= CONFIG ================= */
-const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
-const PROMPTPAY_ID = "0869525072";
-const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const db = supabase.createClient(
+  "https://nvsptbbvxjulrpdebrhn.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
+);
 
 /* ================= STATE ================= */
-let categories=[], products=[], tables=[];
-let currentTable=null;
-let currentOrder=null;
-let cart=[];
-let currentProduct=null;
+let tables=[], categories=[], products=[];
+let currentOrder = null;
 
 /* ================= INIT ================= */
 async function init(){
-  categories=(await db.from('categories').select('*')).data||[];
-  products=(await db.from('products').select('*').eq('active',true)).data||[];
-  tables=(await db.from('tables').select('*')).data||[];
-  renderCategories();
+  tables     = (await db.from('tables').select('*')).data || [];
+  categories = (await db.from('categories').select('*')).data || [];
+  products   = (await db.from('products').select('*').eq('active',true)).data || [];
+
   loadTables();
+  renderCategories();
 }
+init();
 
 /* ================= TABLE ================= */
 function loadTables(){
-  tableSelect.innerHTML='<option value="">-- เลือกโต๊ะ --</option>';
+  tableSelect.innerHTML = '<option value="">-- เลือกโต๊ะ --</option>';
   tables.forEach(t=>{
-    tableSelect.innerHTML+=`<option value="${t.id}">${t.name}</option>`;
+    tableSelect.innerHTML +=
+      `<option value="${t.id}">
+        ${t.name} (${t.status})
+      </option>`;
   });
 }
 
-tableSelect.onchange = async ()=>{
-  if(!tableSelect.value) return;
-  currentTable=tableSelect.value;
+async function openTable(){
+  const tableId = tableSelect.value;
+  if(!tableId) return;
 
   const { data:orders } = await db
     .from('orders')
     .select('*')
-    .eq('table_id',currentTable)
+    .eq('table_id', tableId)
     .eq('status','open')
     .limit(1);
 
   if(orders.length){
-    currentOrder=orders[0];
+    currentOrder = orders[0];
     loadBill();
   }else{
     const { data:newOrder } = await db
       .from('orders')
-      .insert({ table_id:currentTable, status:'open', total:0 })
+      .insert({ table_id:tableId, status:'open' })
       .select().single();
-    currentOrder=newOrder;
-    await db.from('tables').update({status:'in_use'}).eq('id',currentTable);
+
+    currentOrder = newOrder;
+    await db.from('tables')
+      .update({ status:'in_use' })
+      .eq('id', tableId);
+
+    loadTables();
+    loadBill();
   }
-};
+}
 
 /* ================= CATEGORY ================= */
 function renderCategories(){
@@ -163,176 +115,90 @@ function renderCategories(){
     const b=document.createElement('button');
     b.className='bg-slate-700 px-4 py-2 rounded';
     b.innerText=c.name;
-    b.onclick=()=>loadCategory(c.name);
+    b.onclick=()=>loadMenu(c.name);
     categoryBar.appendChild(b);
   });
-  if(categories[0]) loadCategory(categories[0].name);
 }
 
-function loadCategory(cat){
+function loadMenu(cat){
   menu.innerHTML='';
   products.filter(p=>p.category===cat).forEach(p=>{
     const b=document.createElement('button');
     b.className='bg-slate-700 p-3 rounded';
     b.innerText=`${p.name}\n${p.price} บาท`;
-    b.onclick=()=>addItem(p);
+    b.onclick=()=>orderFood(p);
     menu.appendChild(b);
   });
 }
 
-/* ================= ADD ITEM ================= */
-function addItem(p){
-  if(!currentOrder){ Swal.fire('กรุณาเลือกโต๊ะ'); return; }
-
-  if(p.category==='ขนมจีน'){
-    currentProduct=p;
-    addonTitle.innerText=p.name;
-    buildMix(p.name);
-    addonModal.classList.replace('hidden','flex');
+/* ================= ORDER ================= */
+async function orderFood(p){
+  if(!currentOrder){
+    Swal.fire('กรุณาเลือกโต๊ะก่อน');
     return;
   }
 
-  addToCart(p.name,p.price);
+  await db.from('order_items').insert({
+    order_id: currentOrder.id,
+    product_name: p.name,
+    price: p.price,
+    qty: 1
+  });
+
+  loadBill();
 }
 
-/* ===== ADDON ===== */
-function buildMix(main){
-  mixSelect.innerHTML='<option value="">-- เลือกน้ำ --</option>';
-  products.filter(p=>p.category==='ขนมจีน'&&p.name!==main)
-    .forEach(p=>mixSelect.innerHTML+=`<option>${p.name}</option>`);
-}
+/* ================= BILL ================= */
+async function loadBill(){
+  const { data:items } = await db
+    .from('order_items')
+    .select('*')
+    .eq('order_id', currentOrder.id);
 
-function toggleMix(){
-  mixSelect.classList.toggle('hidden',!addonMix.checked);
-}
-
-function confirmAddon(){
-  let name=currentProduct.name;
-  let price=currentProduct.price;
-  let opt=[];
-  if(addonSpecial.checked){ price+=10; opt.push('พิเศษ'); }
-  if(addonMix.checked){
-    if(!mixSelect.value){ Swal.fire('เลือกน้ำ'); return; }
-    price+=10; opt.push(`ผสม:${mixSelect.value}`);
-  }
-  if(opt.length) name+=` (${opt.join(',')})`;
-  addToCart(name,price);
-  closeAddon();
-}
-
-function closeAddon(){
-  addonModal.classList.replace('flex','hidden');
-  addonSpecial.checked=false;
-  addonMix.checked=false;
-  mixSelect.classList.add('hidden');
-}
-
-/* ================= CART / SEND TO KITCHEN ================= */
-async function addToCart(name,price){
-  const found=cart.find(i=>i.name===name);
-  if(found){
-    found.qty++;
-  }else{
-    const item={name,price,qty:1};
-    cart.push(item);
-
-    // 🔥 ส่งเข้าครัวทันที
-    await db.from('order_items').insert({
-      order_id: currentOrder.id,
-      product_name: item.name,
-      price: item.price,
-      qty: item.qty
-    });
-  }
-  renderBill();
-}
-
-function renderBill(){
   bill.innerHTML='';
   let sum=0;
-  cart.forEach(i=>{
+
+  items.forEach(i=>{
     sum+=i.price*i.qty;
     bill.innerHTML+=`
       <div class="flex justify-between border-b py-1">
-        <div>${i.name} × ${i.qty}</div>
-        <div>${i.price*i.qty}</div>
+        <span>${i.product_name} x ${i.qty}</span>
+        <span>${i.price*i.qty}</span>
       </div>`;
   });
+
   total.innerText=sum;
 }
 
-async function loadBill(){
-  cart=[];
-  const { data } = await db.from('order_items')
-    .select('*').eq('order_id',currentOrder.id);
-
-  data.forEach(i=>{
-    cart.push({name:i.product_name,price:i.price,qty:i.qty});
-  });
-  renderBill();
-}
-
 /* ================= PAYMENT ================= */
-function openPay(type){
-  if(!cart.length){ Swal.fire('ยังไม่มีรายการ'); return; }
-  payModal.classList.replace('hidden','flex');
-  const sum=cart.reduce((s,i)=>s+i.price*i.qty,0);
-  payTitle.innerText=`รวม ${sum} บาท`;
+async function pay(type){
+  if(!currentOrder) return;
 
-  cashBox.classList.add('hidden');
-  ppBox.classList.add('hidden');
+  const sum=Number(total.innerText);
 
-  if(type==='cash') cashBox.classList.remove('hidden');
-  else{
-    ppBox.classList.remove('hidden');
-    ppQR.src=`https://promptpay.io/${PROMPTPAY_ID}/${sum}.png`;
-  }
-}
-
-function calcChange(){
-  const sum=cart.reduce((s,i)=>s+i.price*i.qty,0);
-  changeText.innerText=cashInput.value-sum;
-}
-
-async function confirmPay(type){
-  const sum=cart.reduce((s,i)=>s+i.price*i.qty,0);
+  const ok = await Swal.fire({
+    title:`ยืนยันรับเงิน ${sum} บาท`,
+    showCancelButton:true
+  });
+  if(!ok.isConfirmed) return;
 
   await db.from('orders').update({
     status:'paid',
     payment:type,
     total:sum
-  }).eq('id',currentOrder.id);
+  }).eq('id', currentOrder.id);
 
-  await db.from('tables').update({status:'available'}).eq('id',currentTable);
+  await db.from('tables')
+    .update({ status:'available' })
+    .eq('id', currentOrder.table_id);
 
-  cart=[];
   currentOrder=null;
-  renderBill();
-  closePay();
+  bill.innerHTML='';
+  total.innerText=0;
+  loadTables();
 
-  Swal.fire('ชำระเงินเรียบร้อย');
+  Swal.fire('สำเร็จ','ปิดบิลแล้ว','success');
 }
-
-function closePay(){
-  payModal.classList.replace('flex','hidden');
-}
-
-/* ================= CANCEL ================= */
-async function cancelOrder(){
-  if(!currentOrder) return;
-  const r=await Swal.fire({title:'ยกเลิกบิล?',showCancelButton:true});
-  if(!r.isConfirmed) return;
-
-  await db.from('order_items').delete().eq('order_id',currentOrder.id);
-  await db.from('orders').delete().eq('id',currentOrder.id);
-  await db.from('tables').update({status:'available'}).eq('id',currentTable);
-
-  cart=[];
-  currentOrder=null;
-  renderBill();
-}
-
-init();
 </script>
 
 </body>
